--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,7 +16,7 @@ html, body {
 }
 
 .wrapper {
-    min-height: 100%;
+    min-height: 100vh;
     margin-bottom: -100px;
     padding-bottom: 100px;
 }
