--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -80,7 +80,7 @@ li {
     text-decoration: underline;
 }
 
-/* Navigation Styles */
+/* Social icons and navbar link styles */
 .social-icons {
     display: flex;
     align-items: center;
@@ -100,6 +100,7 @@ nav {
     padding-top: 0 !important;
 }
 
+/* Navbar container styles */
 .nav-container {
     background-color: transparent;
     background-size: cover;
@@ -109,16 +110,24 @@ nav {
     width: 100%;
     padding-bottom: 45px;
     height: 100%;
+    opacity: 0.9; /* Set the initial opacity for the background */
+    transition: opacity 1s; /* Add a smooth transition for the opacity property */
 }
 
-.nav-container.show-background{
+/* Apply background image when the show-background class is present */
+.nav-container.show-background {
     background-image: url("/svg/nav_web.svg");
+    opacity: 1; /* Set the opacity to 1 when the class is present */
 }
 
 nav ul {
     margin-top: auto;
     margin-bottom: auto;
     padding-top: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 nav ul a {
