--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -102,7 +102,7 @@ nav {
 
 /* Navbar container styles */
 .nav-container {
-    background-color: transparent;
+    background-image: url("/svg/nav_web.svg");
     background-size: cover;
     background-position: center center;
     top: 0; /* Position the navbar at the top of the page */
@@ -110,6 +110,12 @@ nav {
     width: 100%;
     padding-bottom: 45px;
     height: 100%;
+    
+}
+
+.nav-main-container{
+    background-image: none;
+    background-color: transparent;
     opacity: 0.9; /* Set the initial opacity for the background */
     transition: opacity 1s; /* Add a smooth transition for the opacity property */
 }
@@ -326,7 +332,6 @@ input[type="date"] {
 }
 
 .fa-instagram {
-    background: #125688;
     color: white;
 }
 
@@ -576,7 +581,7 @@ input[type="date"] {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.85);
     display: flex;
     justify-content: center;
     align-items: center;
