--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -110,7 +110,7 @@ nav {
     width: 100%;
     padding-bottom: 45px;
     height: 100%;
-    
+
 }
 
 .nav-main-container{
@@ -555,7 +555,7 @@ input[type="date"] {
     }
 
     .titleh h1 {
-        font-size: 10vw;
+        font-size: 2.5rem;
         margin-left: 0;
     }
 
