Kilógó címsorok javítva

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -559,6 +559,10 @@ input[type="date"] {
         margin-left: 0;
     }
 
+    .titleh{
+        width: 100%;
+    }
+
     .reszletek {
         padding-left: 40px;
     }
