--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -555,7 +555,8 @@ input[type="date"] {
     }
 
     .titleh h1 {
-        font-size: 2.5rem;
+        max-width: 100%;
+        font-size: 2.2rem;
         margin-left: 0;
     }
 
